# erpclasp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
erpclasp/: __init__.py  api.py  config.py  diff.py  main.py  sync.py  utils.py  watcher.py
scripts/: bom_cascading.py  bom_explosion_item.py  current_stock.py  dispatch_confirmation_email.py  erp_item_master.py  erp_purchase_inbound.py  erp_stock.py  erp_stock_ledger.py  execute_local_sql.py  item_master.py  jobworker_warehouse_mapping.py  last_purchase_rate.py  open_po_numbers.py  purchase_dri.py  purchase_inbound.py  purchase_inbound_comment_test.py  purchase_jobwork_report.py  purchase_lead_time.py  sales_order.py  sales_order_data.py  sales_order_events.py  sales_order_events_test.py  scr_auto_elongation_entry.py  scr_auto_loss_entry.py  sku_replacement_runner.py  so_item_tracking_qty_added_date.py  stock_in_hand.py  update_sales_order_items.py  update_sales_order_sku.py
system_console/: calc_erp_requirement_combine.sql  erpnext_purchase_receipts.py  erpnext_purchase_receipts.sql  erpnext_purchase_reports.py  erpnext_purchase_reports.sql  fetch_purchase_receipts.py  receipts_report.sql  run_sql_file.py  sample_receipts.csv
